2017.9/_sources/plugins/available/longitudinal/nmit.txt
nmit: Nonparametric microbial interdependence test
==================================================

.. raw:: html

   <div class="tabbed">
     <ul class="nav nav-tabs">
       <li class="active"><a data-toggle="tab" href="#cli">Command line interface</a></li>
       <li><a data-toggle="tab" href="#api">Artifact API</a></li>
     </ul>
     <div class="tab-content">
       <div id="cli" class="tab-pane fade in active">
         <pre>Usage: qiime longitudinal nmit [OPTIONS]

     Perform nonparametric microbial interdependence test to determine
     longitudinal sample similarity as a function of temporal microbial
     composition. For more details and citation, please see
     doi.org/10.1002/gepi.22065

   Options:
     --i-table PATH                  Artifact: FeatureTable[RelativeFrequency]
                                     [required]
                                     Feature table to use for
                                     microbial interdependence test.
     --m-metadata-file PATH          Metadata file or artifact viewable as
                                     metadata. This option may be supplied
                                     multiple times to merge metadata  [required]
                                     Sample metadata containing group_column,
                                     state_column, individual_id_column, and
                                     optionally metric values.
     --p-individual-id-column TEXT   [required]
                                     Metadata column containing IDs
                                     for individual subjects.
     --p-corr-method [spearman|pearson|kendall]
                                     [default: kendall]
                                     The temporal correlation
                                     test to be applied.
     --p-dist-method [nuc|fro]       [default: fro]
                                     Temporal distance method, see
                                     numpy.linalg.norm for details.
     --o-distance-matrix PATH        Artifact: DistanceMatrix [required if not
                                     passing --output-dir]
                                     The resulting distance
                                     matrix.
     --output-dir DIRECTORY          Output unspecified results to a directory
     --cmd-config PATH               Use config file for command options
     --verbose                       Display verbose output to stdout and/or
                                     stderr during execution of this action.
                                     [default: False]
     --quiet                         Silence output if execution is successful
                                     (silence is golden).  [default: False]
     --help                          Show this message and exit.</pre>
       </div>
       <div id="api" class="tab-pane fade">
         <pre>Nonparametric microbial interdependence test

   Perform nonparametric microbial interdependence test to determine
   longitudinal sample similarity as a function of temporal microbial
   composition. For more details and citation, please see
   doi.org/10.1002/gepi.22065

   Parameters
   ----------
   table : FeatureTable[RelativeFrequency]
       Feature table to use for microbial interdependence test.
   metadata : Metadata
       Sample metadata containing group_column,  state_column,
       individual_id_column, and optionally metric values.
   individual_id_column : Str
       Metadata column containing IDs for individual subjects.
   corr_method : Str % Choices({'kendall', 'pearson', 'spearman'}), optional
       The temporal correlation test to be applied.
   dist_method : Str % Choices({'fro', 'nuc'}), optional
       Temporal distance method, see numpy.linalg.norm for details.

   Returns
   -------
   distance_matrix : DistanceMatrix
       The resulting distance matrix.</pre>
       </div>
     </div>
   </div>