2018.4/_sources/plugins/available/longitudinal/nmit.txt
nmit: Nonparametric microbial interdependence test
==================================================


.. raw:: html

   <table class="table action-info">
     <tbody>
       <tr>
         <th scope="row"><p></p>Citations</th>
         <td>

.. bibliography:: longitudinal:nmit.bib
   :all:
   :keyprefix: longitudinal:nmit:
   :labelprefix: longitudinal:nmit:

.. raw:: html

         </td>
       </tr>
     </tbody>
   </table>


.. raw:: html

   <div class="tabbed">
     <ul class="nav nav-tabs">
       <li class="active"><a data-toggle="tab" href="#cli">Command line interface</a></li>
       <li><a data-toggle="tab" href="#api">Artifact API</a></li>
     </ul>
     <div class="tab-content">
       <div id="cli" class="tab-pane fade in active">
         <pre>Usage: qiime longitudinal nmit [OPTIONS]

     Perform nonparametric microbial interdependence test to determine
     longitudinal sample similarity as a function of temporal microbial
     composition. For more details and citation, please see
     doi.org/10.1002/gepi.22065

   Options:
     --i-table ARTIFACT PATH FeatureTable[RelativeFrequency]
                                     Feature table to use for microbial
                                     interdependence test.  [required]
     --m-metadata-file MULTIPLE PATH
                                     Metadata file or artifact viewable as
                                     metadata. This option may be supplied
                                     multiple times to merge metadata. Sample
                                     metadata file containing
                                     individual_id_column.  [required]
     --p-individual-id-column TEXT   Metadata column containing IDs for
                                     individual subjects.  [required]
     --p-corr-method [kendall|pearson|spearman]
                                     The temporal correlation test to be applied.
                                     [default: kendall]
     --p-dist-method [nuc|fro]       Temporal distance method, see
                                     numpy.linalg.norm for details.  [default:
                                     fro]
     --o-distance-matrix ARTIFACT PATH DistanceMatrix
                                     The resulting distance matrix.  [required if
                                     not passing --output-dir]
     --output-dir DIRECTORY          Output unspecified results to a directory
     --cmd-config PATH               Use config file for command options
     --verbose                       Display verbose output to stdout and/or
                                     stderr during execution of this action.
                                     [default: False]
     --quiet                         Silence output if execution is successful
                                     (silence is golden).  [default: False]
     --citations                     Show citations and exit.
     --help                          Show this message and exit.</pre>
       </div>
       <div id="api" class="tab-pane fade">
         <pre>Nonparametric microbial interdependence test

   Perform nonparametric microbial interdependence test to determine
   longitudinal sample similarity as a function of temporal microbial
   composition. For more details and citation, please see
   doi.org/10.1002/gepi.22065

   Parameters
   ----------
   table : FeatureTable[RelativeFrequency]
       Feature table to use for microbial interdependence test.
   metadata : Metadata
       Sample metadata file containing individual_id_column.
   individual_id_column : Str
       Metadata column containing IDs for individual subjects.
   corr_method : Str % Choices({'kendall', 'pearson', 'spearman'}), optional
       The temporal correlation test to be applied.
   dist_method : Str % Choices({'fro', 'nuc'}), optional
       Temporal distance method, see numpy.linalg.norm for details.

   Returns
   -------
   distance_matrix : DistanceMatrix
       The resulting distance matrix.</pre>
       </div>
     </div>
   </div>